CSS/navbar.css
.navContainer {
  display: flex;
  justify-content: space-around;
  align-items: flex-end;
  padding: 1em 0 1em 0;
  position: relative;
  overflow: hidden;
  background-color: white;
  z-index: 1000;
}

.navList ul {
  display: flex;
  flex-direction: row;
  gap: 4em;
}

.navList ul li a {
  color: var(--gray);
  font-size: 1em;
  font-weight: 600;
  text-transform: uppercase;
}
.navList ul li a:hover,
.navList ul li a:active {
  color: var(--light-pink);
}

.logoImg {
  width: 16em;
  margin-left: auto;
}
.navToggle {
  margin-left: 1em;
  display: none;
  cursor: pointer;
  transition: opacity 0.3s ease;
}
.menu {
  font-size: 3em;
  color: var(--gray);
  transition: transform 0.3s ease;
}
.sticky {
  position: fixed;
  top: 0;
  width: 100%;
}

.linkList {
  display: none;
  transition: opacity 0.3s ease;
}
.btn-nav {
  font-weight: 600;
  padding: 0.4em;
  background-color: var(--pink);
}
#navLinkColor {
  color: white;
}

.btn-nav:hover,
.btn-nav:active {
  transition: opacity 0.3s ease;
  box-shadow: var(--box-shadow);
  background-color: var(--light-pink);
}

